--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
         <a class="pill pill-link"
            href="https://www.instagram.com/rumicafe"
-           target="_blank">
+           target="_blank" rel="noopener">
           Follow on Instagram
         </a>
 
         <a class="pill pill-link"
            href="https://maps.google.com/?q=Rumi+Cafe+Oman"
-           target="_blank">
+           target="_blank" rel="noopener">
           View Location
         </a>
       </div>
