--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
   <main class="page">
 
-    <!-- Header -->
     <header class="hero">
       <div class="brand">
         <h1>Rumi Cafe</h1>
@@ -24,12 +23,14 @@
       <div class="hero-actions">
         <span class="pill">All prices in <b>OMR</b></span>
 
+        <!-- CHANGE THIS to your real Instagram link -->
         <a class="pill pill-link"
            href="https://www.instagram.com/rumicafe"
            target="_blank" rel="noopener">
           Follow on Instagram
         </a>
 
+        <!-- CHANGE THIS to your exact Google Maps link if you want -->
         <a class="pill pill-link"
            href="https://maps.google.com/?q=Rumi+Cafe+Oman"
            target="_blank" rel="noopener">
@@ -75,8 +76,8 @@
         <button id="whatsAppBtn" class="btn btn-primary" type="button">
           Send Order on WhatsApp
         </button>
-
       </aside>
+
     </section>
   </main>
 
