--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="hero">
       <div class="brand">
-        <h1>Rumi Cafe</h1>
+        <h1>Rumi Cafe Menu</h1>
       </div>
 
       <div class="hero-actions">
