--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- CHANGE THIS to your real Instagram link -->
         <a class="pill pill-link"
-           href="https://www.instagram.com/rumicafe"
+           href="https://www.instagram.com/rumi_cafee?igsh=MXY0a2Z5YWN3anI3Ng%3D%3D&utm_source=qr"
            target="_blank" rel="noopener">
           Follow on Instagram
         </a>
