--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- CHANGE THIS to your exact Google Maps link if you want -->
         <a class="pill pill-link"
-           href="https://maps.google.com/?q=Rumi+Cafe+Oman"
+           href="https://share.google/4YFE72RZWmdumdQBb"
            target="_blank" rel="noopener">
           View Location
         </a>
